style.less
/* ... */
body.ie-8,body.ie-9 {
	header#masthead hgroup {
		#header-sidebar {
			padding-top: 40px;
			padding-bottom: 40px;
		}
	}
}

#main {
	.clearfix();
}

#primary {
	float: left;
	width: 71.287%;
}

body.no-sidebar #primary {
	float: none;
	width: auto;
}

/* Full Width Primary blocks */
.siteorigin-panels-home #primary,
.page-template-templatestemplate-full-php #primary,
.page-template-templatestemplate-full-notitle-php #primary{
	width: auto;
	float: none;
}

#secondary {
	float: right;
	width: 23.762%;
}

#main {
	background: #FCFCFC;
	padding: 35px;
}

#main-slider {
	line-height: 0;
	background: #EEEEEE;

	.flexslider {
		margin-bottom: 0;
	}

	h1 {
		font-weight: 100;
		text-shadow: 0 1px 1px rgba(0,0,0,0.5);
	}

	.text-em-wrapper {
		padding: 10px 50px;
		background: rgba(0,0,0,0.25);
		border: 3px solid white;
		font-weight: bold;
	}

	.metaslider, #metaslider-demo {
		margin:  0 auto;
	}
}


/* =Responsive Layout
----------------------------------------------- */

@media (max-width:1080px) {
	body.responsive {
		header#masthead {
			hgroup {
				.logo img {
					/* Scale down the logo if necessary */
					max-width: 100%;
					height: auto;
				}
			}

			&.masthead-logo-in-menu {
				.logo {
					margin-left: 20px;
				}

				.main-navigation .menu-mobilenav-container ul {
					margin-right: 0;
					li {
						float: right;

						a {
							padding-left: 20px;
							padding-right: 20px;
						}

					}
				}

				#search-icon-icon {
					display: none;
				}
			}
		}
	}
}

/* We consider 680px to be mobile resolution */
@media (max-width:680px) {
	body.responsive {

		header#masthead {
			hgroup {
				text-align: center;

				.logo {
					float:none;

					img {
						margin: 0 auto;
						padding-top: 0px !important;
						padding-bottom: 0px !important;
					}
				}

				.support-text, #header-sidebar {
					position: static;
					display: block;
					margin-top: 30px;
					max-width: 100%;

					img {
						max-width: 100%;
						height: auto;
					}
				}

				#header-sidebar {
					padding-top: 0 !important;
					padding-bottom: 0 !important;
					height: auto;

					.widget{
						display: block;
						margin: 0 auto;
						float: none;
					}
				}

			}
		}

		#primary, #secondary {
			width: auto;
			float: none;
		}

		#search-icon {

		}

		#secondary {
			margin-top: 35px;
		}

		#footer-widgets .widget {
			display: block;
			margin-bottom: 25px;
			float:none;
		}

		#footer-widgets .widget:last-child{
			margin-bottom:0;
		}
	}
}

body.responsive {
	#page-wrapper {
		max-width: 1080px;
		width: auto;
		overflow-x: hidden;
	}

	&.layout-full {
		#page-wrapper {
			max-width: 100%;
		}
	}

	&.layout-boxed {
		#page-wrapper {
			overflow-x: visible;
		}
	}

	&.layout-full #page-wrapper{
		.full-container {
			max-width: 1080px;
			margin-left: auto;
			margin-right: auto;
		}
	}
}

/* =Menu
----------------------------------------------- */

.main-navigation {
	margin: 0 -35px;
	background: #343538;
	font-size: 13px;
	position: relative;

	/* Font awesome icons */
	[class^="icon-"] {
		display: inline-block;
		margin-right: 15px;
		font-size: 16px;
		line-height: 0.5em;
		color: #CCCCCC;
	}

	a:hover [class^="icon-"] {
		color: #FFFFFF;
	}

	ul {
		list-style: none;
		margin: 0;
		padding-left: 0;
		.clearfix();

		li {
			display:block;
			position: relative;
			float: left;

			&:hover > a {
				background: #00bcff;
				color: #FFFFFF;
			}

			a {
				padding: 20px 35px;
				.box-sizing(border-box);

				&, & > * {
					.transition(0.4s);
				}
			}
		}

		/* Second level menu items */
		ul {
			.box-shadow(~"0 1px 2px rgba(0,0,0,0.15)");

			background: #464646;
			display: none;

			position: absolute;
			top: 100%;
			left: 0;
			z-index: 99999;

			a {
				width: 200px;
				padding: 15px 20px;
			}

			li {
				position: relative;

				/* Hovering over 2nd level items */
				&:hover > a {
					background: #00bcff;
					color: #FFFFFF;
				}
			}

			/* Third Level Items */

			ul {
				left: 100%;
				top: 0;
				margin-left: 0;
			}
		}

		li:hover {
			> ul {
				display: block;
			}
		}
	}

	/* General menu link styling */
	a {
		display: block;
		text-decoration: none;
		color: #e2e2e2;
		font-weight: bold;
	}

	/* For when the menu becomes a sticky menu */
	&.sticky {
		.box-shadow(~"0 2px 1px rgba(0,0,0,0.15)");
	}
}

body.has-menu-search .main-navigation ul {
	margin-right: 59px;
}

/* Handle the navigation slightly differently on mobile devices */

body.mobile-device {

	.main-navigation {
		ul {
			ul {
				display: none;
			}
		}

		li:hover ul {
			display: block;
		}
	}

}

.mobile-nav-frame {
	[class^="icon-"] {
		display: inline-block;
		margin-right: 10px;
		min-width: 1em;
	}
}

.mobile-nav-icon {
	font-family: 'FontAwesome';
	display: inline-block;
	margin-right: 10px;
}

.mobile-nav-icon:before {
	font-size: 14px;
	content: "\f00b";
}
/* ... */

